[project]
name = "fs.dropboxfs"
version = "1.0.7"
description = "Pyfilesystem2 implementation for Dropbox"
maintainers = [
	{ name = "Rehan Khwaja", email = "rehan@khwaja.name" }
]
readme = "README.md"
packages = [{include = "fs"}]
keywords = ["filesystem", "Pyfilesystem2", "dropbox"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "dropbox>=12.0.2",
    "fs>=2.0.10",
    "setuptools>=70",
]

[project.urls]
Homepage = "https://github.com/rkhwaja/fs.dropboxfs"

[project.entry-points."fs.opener"]
"dropbox" = "fs.dropboxfs.opener:DropboxOpener"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fs"]

[tool.poe.tasks]
lint = "ruff check fs/dropboxfs/ tests/"

[tool.poe.tasks.test]
shell = """
pytest -n 8 || exit 1
"""

[tool.ruff]
line-length = 1000
lint.ignore = ["ANN", "B011", "COM812", "D", "DTZ", "EM", "ERA001", "FBT002", "FIX", "G004", "I", "N802", "N806", "N815", "N816", "PLR0913", "PTH", "S101", "T201", "TD", "TRY003", "W191"]
lint.select = ["ALL"]
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"fs/**" = ["PT"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.uv]
dev-dependencies = [
    "poethepoet>=0.16.4",
    "pyperclip>=1.8.2",
    "pytest-xdist>=3.2.1",
    "pytest>=7.2.0",
    "ruff>=0.4.4",
]
