[project]
name = "fs.dropboxfs"
version = "1.0.7"
description = "Pyfilesystem2 implementation for Dropbox"
maintainers = [
	{ name = "Rehan Khwaja", email = "rehan@khwaja.name" }
]
readme = "README.md"
packages = [{include = "fs"}]
keywords = ["filesystem", "Pyfilesystem2", "dropbox"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "dropbox>=12.0.2",
    "fs>=2.0.10",
    "setuptools>=70",
]

[project.urls]
Homepage = "https://github.com/rkhwaja/fs.dropboxfs"

[project.entry-points."fs.opener"]
"dropbox" = "fs.dropboxfs.opener:DropboxOpener"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fs"]

[tool.poe.tasks]
lint = "ruff check fs/dropboxfs/ tests/"

[tool.poe.tasks.test]
shell = """
pytest -n 8 || exit 1
"""

[tool.ruff]
line-length = 1000
lint.ignore = [
	"ANN",     # Requires annotations
	"B011",    # Disallows `assert False`
	"COM812",  # Requires trailing comma
	"D",       # Requires various docstrings
	"DTZ",     # flake8-datetimetz
	"EM",      # Some complaints about how exception strings are constructed
	"ERA001",  # Disallows commented out code, but it's detecting false positives
	"FBT002",  # Disallows boolean positional arguments
	"FIX",     # Disallows FIXME-type comments
	"G004",    # Disallows using f-strings in log strings
	"I",       # False positive isort complaints
	"N802",    # Requires snake case function names
	"N806",    # Complaints about variable names
	"N815",    # Complaints about variable names
	"N816",    # Complaints about variable names
	"PTH",     # Requires use of pathlib
	"S101",    # Disallows use of assert
	"T201",    # Disallows use of print
	"TD",      # Requires a particular formatting of TODO comments
	"TRY003",  # Disallows long exception messages
	"W191",    # Disallows tab indentation
	]
lint.select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"fs/**" = ["PT"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.uv]
dev-dependencies = [
    "poethepoet>=0.16.4",
    "pyperclip>=1.8.2",
    "pytest-xdist>=3.2.1",
    "pytest>=7.2.0",
    "ruff>=0.4.4",
]
