[metadata]
name = fs.dropboxfs
version = 0.0.2
author = Rehan Khwaja
author-email = rehan@khwaja.name
home-page = https://github.com/rkhwaja/fs.dropboxfs
description = Pyfilesystem2 implementation for Dropbox
long-description = file: README.rst
license = MIT
platform = any
keywords = filesystem, Pyfilesystem2, dropbox

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = fs.dropboxfs
install_requires =
  fs >= 2.0.7
  dropbox

[bdist_wheel]
universal = 0
